Update the prometheus charts
The old prometheus-operator chart produces deprecated Group and Kind for
the Deployment objects. This commit changes to a valid chart.

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,7 +2,8 @@ helmCharts:
 - name: cert-manager
   releaseName: my-cert-manager
   namespace: cert-manager
-- name: prometheus-operator
-  repo: https://charts.cloudposse.com/incubator
-  version: 0.2.0
-  releaseName: my-prometheus-operator
+- name: prometheus
+  repo: https://prometheus-community.github.io/helm-charts
+  version: 14.3.0
+  releaseName: my-prometheus
+  namespace: monitoring
