--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,10 +1,24 @@
-helmCharts:
-- name: cert-manager
-  releaseName: my-cert-manager
-  namespace: cert-manager
-  valuesFile: https://raw.githubusercontent.com/config-sync-examples/helm-components/main/cert-manager-values.yaml
-- name: prometheus
-  repo: https://prometheus-community.github.io/helm-charts
-  version: 14.3.0
-  releaseName: my-prometheus
-  namespace: monitoring
+generators:
+- |-
+  apiVersion: fn.kpt.dev/v1alpha1
+  kind: RenderHelmChart
+  metadata:
+    name: demo
+    annotations:
+      config.kubernetes.io/function: |
+        exec:
+          path: render-helm-chart
+  helmGlobals:
+    chartHome: ./charts
+  helmCharts:
+  - name: coredns
+    releaseName: my-coredns
+    namespace: coredns
+  - name: ingress-nginx
+    repo: https://kubernetes.github.io/ingress-nginx
+    version: 4.0.12
+    releaseName: my-ingress-nginx
+    namespace: ingress-nginx
+
+commonLabels:
+  test-case: hydration
